# trading_agent

./: docker-compose.yml
services/signal_generator/: main.py  pyproject.toml
services/trade_producer/: pyproject.toml
services/trade_producer/src/: config.py  main.py
services/trade_producer/src/data_source/: kraken_websocket_client.py
services/trades_to_clickhouse/: Dockerfile  pyproject.toml
services/trades_to_clickhouse/src/: config.py  main.py
services/trades_to_clickhouse/src/trade_processor/: models.py  processor.py
