[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.9.2",
    "loguru>=0.7.3",
    "numpy<2.0",
    "pydantic-settings>=2.3,<2.11",
    "quixstreams>=3.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
